# fluxnote

./: .gitignore  AGENTS.md  README.md  README.zh.md  components.json  development.md  drizzle.config.ts  forge.config.ts  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.electron.json  tsconfig.json  vite.cli.config.ts  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: app.tsx  global.css  main.tsx  route-tree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  database.rs  error.rs  features.rs  lib.rs  main.rs
src-tauri/src/database/: migrations.rs
src-tauri/src/dev/: client.rs  env.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/features/: assets.rs  auto_archive.rs  blocks.rs  deep_link.rs  note.rs  sample.rs  tags.rs  validated_command_arg.rs  window.rs
src-tauri/src/features/assets/: service.rs
src-tauri/src/features/auto_archive/: core.rs  service.rs
src-tauri/src/features/blocks/: models.rs  service.rs
src-tauri/src/features/note/: models.rs  service.rs
src-tauri/src/features/tags/: models.rs  service.rs
src-tauri/src/features/window/: position.rs
src/app/: direction.tsx  i18n.tsx  index.tsx  invoke.ts  theme.tsx
src/cli/: cli-ipc-client.ts  flux  flux-cli.mjs  flux-cli.test.ts  flux-cli.ts  index.test.ts  index.ts  parse-args.test.ts  parse-args.ts
src/clients/: assets.ts  blocks.ts  index.ts  note.ts  sample.ts  tags.ts
src/main/: index.ts
(+421 files in other folders)
