[package]
name = "fluxnote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluxnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
window-vibrancy = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
garde = { version = "0.22.1", features = ["derive", "serde"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"
time = { version = "0.3.44", features = ["formatting"] }
uuid = { version = "1.18.1", features = ["v7"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-deep-link = "2.0.0"
clap = { version = "4", features = ["derive"] }
dirs = "5"
open = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[[bin]]
name = "flux"
path = "src/main.rs"
